mutlitargeting change for patch label bump

--- a/MSBump/buildMultiTargeting/MSBump.targets
+++ b/MSBump/buildMultiTargeting/MSBump.targets
@@ -14,6 +14,7 @@
       BumpPatch="$(BumpPatch)"
       BumpRevision="$(BumpRevision)"
       BumpLabel="$(BumpLabel)"
+      BumpLabelPatch ="$(BumpLabelPatch)" 
       ResetMajor="$(BumpResetMajor)"
       ResetMinor="$(BumpResetMinor)"
       ResetPatch="$(BumpResetPatch)"
